--- a/index.html
+++ b/index.html
@@ -12,24 +12,43 @@
 
     <title>Apex Engineering Champahati</title>
     <style>
-        body {
-            background-image: url(https://images.pexels.com/photos/190574/pexels-photo-190574.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-            /* background-position: center; */
-            background-repeat: no-repeat;
-            background-size: cover;
+        body div {
+            background: rgb(255, 255, 255);
+            background: linear-gradient(90deg, rgba(255, 255, 255, 1) 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0) 100%);
         }
+
+        body {
+            height: 100%;
+            width: 100%;
+            background-color: #000;
+        }
+
+        header img {
+            margin: 25vh auto;
+            height: 50vh;
+            width: auto;
+        }
+
         h1 {
-            margin-top: 25vh;
+            margin: 33vh auto;
+            font-size: 12vh;
         }
     </style>
 </head>
 
 <body>
     <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h1 class="text-center text-danger fw-bold display-4">Apex <br />Engineering <br />Champahati</h1>
+        <div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-12">
+                        <h1 class="text-center text-danger fw-bold display-4">Apex <br />Engineering <br />Champahati
+                        </h1>
+                    </div>
+                    <div class="col-md-8 col-12">
+                        <img src="https://images.pexels.com/photos/190574/pexels-photo-190574.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="Apex Engineering Champahati" class="rounded shadow mx-auto d-block">
+                    </div>
                 </div>
             </div>
         </div>
