--- a/index.html
+++ b/index.html
@@ -20,18 +20,31 @@
         body {
             height: 100%;
             width: 100%;
-            background-color: #000;
+            background-color: #dc3545;
         }
 
         header img {
-            margin: 25vh auto;
+            margin: 10vh auto;
             height: 50vh;
             width: auto;
         }
 
         h1 {
-            margin: 33vh auto;
-            font-size: 12vh;
+            margin: 15vh auto;
+            font-size: 18vh;
+            text-shadow: 0px 2px 2px #b9b9b9;
+        }
+
+        @media only screen and (min-width: 576px) {
+
+            header img {
+                margin: 28vh auto;
+            }
+
+            h1 {
+                margin: 36vh auto;
+                font-size: 12vh;
+            }
         }
     </style>
 </head>
@@ -41,13 +54,13 @@
         <div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 col-12">
-                        <h1 class="text-center text-danger fw-bold display-4">Apex <br />Engineering <br />Champahati
+                    <div class="col-sm-4 col-12">
+                        <h1 class="text-center fw-bold display-4">Apex <br />Engineering <br />Champahati
                         </h1>
                     </div>
-                    <div class="col-md-8 col-12">
+                    <div class="col-sm-8 col-12 px-5">
                         <img src="https://images.pexels.com/photos/190574/pexels-photo-190574.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                            alt="Apex Engineering Champahati" class="rounded shadow mx-auto d-block">
+                            alt="Apex Engineering Champahati" class="img-fluid rounded shadow mx-auto d-block">
                     </div>
                 </div>
             </div>
