--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         }
 
         header img {
-            margin: 10vh auto;
+            margin: 10vh auto 30vh auto;
             height: 50vh;
             width: auto;
         }
 
         h1 {
-            margin: 15vh auto;
+            margin: 15vh auto 5vh auto;
             font-size: 18vh;
             text-shadow: 0px 2px 2px #b9b9b9;
         }
