--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                         <li class="list-group-item border-0 h3">Apex Engineering & Co.</li>
                     </ul>
                     <ul class="list-group lead">
-                        <li class="list-group-item border-0">Managing Director - Mr. Gopal Ghosh Director</li>
+                        <li class="list-group-item border-0">Managing Director - Mr. Gopal Ghosh</li>
                         <li class="list-group-item border-0">Director - Mr. Subhartha Ghosh.</li>
                     </ul>
                     <ul class="nav">
