--- a/index.html
+++ b/index.html
@@ -134,9 +134,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-12">
-                    <img width="150" class="img-fluid rounded" src="apex-engineering-logo.jpeg" alt="Apex Engineering Logo" loading="lazy">
+                    <img width="150" class="img-fluid rounded" src="apex-engineering-logo.jpeg"
+                        alt="Apex Engineering Logo" loading="lazy">
                     <h1 class="text-white display-5 my-5">Apex Engineering & Co.</h1>
-                    <p class="lead my-4 text-white text-justify my-5">An ISO 9001:2015 Certified Company. Registered With
+                    <p class="lead my-4 text-white text-justify my-5">An ISO 9001:2015 Certified Company. Registered
+                        With
                         NSIC. Manufacturer of: Mechanical & Electrical Equipment Maintaining Quality Since 1989 </p>
                     <a class="btn btn-primary py-2 px-4" href="tel:+919836721230" role="button">
                         <span class="px-2">Contact Us</span>
@@ -179,7 +181,8 @@
                         <li class="nav-link border rounded-pill m-2">Great Technical Support</li>
                         <li class="nav-link border rounded-pill m-2">Unbeatable Prototype Services</li>
                         <li class="nav-link border rounded-pill m-2">Automation Technology</li>
-                        <li class="nav-link border rounded-pill m-2">Long Term Dealing With Govt. & Non-Govt. Organisation at Home And Abroad
+                        <li class="nav-link border rounded-pill m-2">Long Term Dealing With Govt. & Non-Govt.
+                            Organisation at Home And Abroad
                         </li>
                     </ul>
                 </div>
@@ -324,18 +327,17 @@
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <ul class="lead text-white">
-                            <li>Design & development mechanical products. by autocad / solid work system with
+                            <li>Design & development of mechanical products. by autocad / solid work system with
                                 fabrication.
                             </li>
-                            <li>Chemical analysts of metal and nonmetal products.</li>
-                            <li>Good quality with high accuracy</li>
+                            <li>Chemical analysis of metal and nonmetal products.</li>
                         </ul>
                     </div>
                     <div class="col-md-6 col-12">
                         <ul class="lead text-white">
+                            <li>Good quality with high accuracy</li>
                             <li>Testing & measuring instrument for precision jobs.</li>
                             <li>Dimension testing Jigs & fixtures for quality arrangement</li>
-                            <li>Good quality with high accuracy</li>
                         </ul>
                     </div>
                 </div>
@@ -416,7 +418,8 @@
         <div class="container ">
             <div class="row ">
                 <div class="col-12 ">
-                    <p class="text-center text-white pt-3 ">All Rights Reserved © 2022 | <a href="https://bhritick.github.io/site/">Developed by : Hritick B</a></p>
+                    <p class="text-center text-white pt-3 ">All Rights Reserved © 2022 | <a
+                            href="https://bhritick.github.io/site/">Developed by : Hritick B</a></p>
                 </div>
             </div>
         </div>
