--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         and valves[Specified by RDSO].</h3>
                 </div>
                 <div class="col-md-4 col-12">
-                    <ul class="list-group lead my-3">
+                    <ul class="list-group lead my-4">
                         <li class="list-group-item">Modular Subracks [2U,3U,4U,5U,6U].</li>
                         <li class="list-group-item">Installation Lever.</li>
                         <li class="list-group-item">Btacket for air spring brake controller.</li>
@@ -234,14 +234,14 @@
                 </div>
                 <div class="col-md-4 col-12">
                     <ul class="list-group lead">
-                        <li class="list-group-item">PIM Module(Modem box, Reset Box, Media changeover box).</li>
-                        <li class="list-group-item">Tag Block[200/160/120/100/96 ways].</li>
-                        <li class="list-group-item">Ducting Assembly.</li>
-                        <li class="list-group-item">Cabinet and equipments for domino panel</li>
+                        <li class="list-group-item bg-light">PIM Module(Modem box, Reset Box, Media changeover box).</li>
+                        <li class="list-group-item bg-light">Tag Block[200/160/120/100/96 ways].</li>
+                        <li class="list-group-item bg-light">Ducting Assembly.</li>
+                        <li class="list-group-item bg-light">Cabinet and equipments for domino panel</li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-12">
-                    <ul class="list-group lead my-3">
+                    <ul class="list-group lead my-4">
                         <!-- <li class="list-group-item">Parts of Domino Panel.</li> -->
                         <li class="list-group-item">Enclosure for Power Supply (UFSBI).</li>
                         <li class="list-group-item">Cabinel for Earth leakage Detector.</li>
@@ -284,12 +284,20 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-12">
-                        <ul class="list-group lead my-3">
+                        <ul class="list-group lead">
                             <li class="list-group-item">Autocad desinging</li>
-                            <li class="list-group-item">Maching Machining</li>
-                            <li class="list-group-item">Automatic culling bending (CNC)</li>
+                            <li class="list-group-item">Machining</li>
+                            <li class="list-group-item">Automatic cutting bending (CNC)</li>
                             <li class="list-group-item">Casting</li>
                             <li class="list-group-item">Laser cutting </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 col-12">
+                        <ul class="list-group lead my-2">
+                            <li class="list-group-item bg-light">Fabrication</li>
+                            <li class="list-group-item bg-light">Automatic assembly system</li>
+                            <li class="list-group-item bg-light">Quality Controlling testing arrangements</li>
+                            <li class="list-group-item bg-light">Separated development Unit</li>
                         </ul>
                     </div>
                     <div class="col-md-4 col-12">
@@ -298,17 +306,8 @@
                             <li class="list-group-item">Moulding</li>
                             <li class="list-group-item">Welding (TIG, SPOT, MMAW)</li>
                             <li class="list-group-item">Rebating</li>
-                            <li class="list-group-item">More manual</li>
+                            <!-- <li class="list-group-item">More manual</li> -->
                             <li class="list-group-item">Machining arrangement</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4 col-12 my-3">
-                        <ul class="list-group lead">
-                            <li class="list-group-item">Fabrication</li>
-                            <li class="list-group-item">Automatic assembly system</li>
-                            <li class="list-group-item">Quality Controlling testing</li>
-                            <li class="list-group-item">Arrangement</li>
-                            <li class="list-group-item">Separated development Unit</li>
                         </ul>
                     </div>
                 </div>
