--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="container my-5 py-5">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="display-5 text-black text-center">Product Design and Manufacturing</h2>
+                    <h2 class="display-5 text-black text-center">Product Design & Manufacturing</h2>
                     <h3 class="text-black text-center h4 py-5">Railway coachfitting, Railway signalling, Railway brakes
                         and valves[Specified by RDSO].</h3>
                 </div>
